--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
+    "@babel/core": "^7.0.0-beta.47",
     "bulma": "^0.7.1",
     "debounce": "^1.1.0",
     "file-saver": "^1.3.8",
@@ -55,7 +56,10 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "merge-options": ">=1.0.1",
+    "hoek": ">=4.2.1",
+    "randomatic": ">=3.0.0"
   },
   "eslintConfig": {
     "root": true,
